<resources>
    <string name="app_name">Home Workout Fitness</string>
    <string name="AdMob_App_ID">ca-app-pub-7846062786229673~9633984968</string>
    <string name="AdMob_BannerAd_ID">ca-app-pub-7846062786229673/5694739956</string>
    <string name="AdMob_InterstitialAd_ID">ca-app-pub-7846062786229673/9442413272</string>
    <string name="Abs">Abs</string>
    <string name="Back">Back</string>
    <string name="Biceps">Biceps</string>
    <string name="Calf">Calf</string>
    <string name="Chest">Chest</string>
    <string name="Equipment">Equipment</string>
    <string name="Focus">Focus</string>
    <string name="Forearms">Forearms</string>
    <string name="Goal">Goal</string>
    <string name="LANGUAGE">LANGUAGE</string>
    <string name="Legs">Legs</string>
    <string name="Place">Place</string>
    <string name="REMINDER">REMINDER</string>
    <string name="RESET">RESET</string>
    <string name="Shoulders">Shoulders</string>
    <string name="Skill_level">Skill Level</string>
    <string name="Target_Group">Target Group</string>
    <string name="Triceps">Triceps</string>
    <string name="_10_barbell_hack_squat">Muscle: Glutes\n\nStep 1: Stand straight with get shoulder width apart. Hold barbell with overhand grip. Place barbell behind your hamstrings. Distance between your hands should be wider than shoulder width apart.\n\nStep 2: Lower yourself by bending your knees. You back is straight throughout the whole movement. Stop When your thighs are parallel with the ground or when the barbell touches the floor. When you return to the starting position, generate energy with your lower back.</string>
    <string name="abdominals_definition_and_fat_burning">Abdominals definition &amp; fat burning.</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="ad">Add</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arms">Arms</string>
    <string name="auto">Auto</string>
    <string name="back">Back</string>
    <string name="back_and_arms">Back &amp; Arms.</string>
    <string name="barbell_dumbbells_bench">Barbell Dumbbells Bench.</string>
    <string name="barbell_hack_squat">Barbell Hack Squat</string>
    <string name="beginner_intermediate_advanced">Beginner Intermediate Advanced.</string>
    <string name="bench_dumbbell">Bench, Dumbbell.</string>
    <string name="bench_dumbbell_balance_ball">Bench, Dumbbell, Balance Ball.</string>
    <string name="bench_dumbbell_mat_body_weight">Bench, Dumbbell, Mat, Body Weight.</string>
    <string name="blanck">Please fill up the text field!</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="building_muscle_add_definition_and_strength">Building muscle add definition and strength.</string>
    <string name="building_muscle_add_volume_and_strength">Building muscle add volume and strength.</string>
    <string name="camera">Camera/Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="cardio_routine_of_the_full_body">Cardio routine of the full Body.</string>
    <string name="cat_name1">Bodybuilding</string>
    <string name="cat_name10">LEGS POWER WORKOUT PLAN</string>
    <string name="cat_name11">SHOULDERS POWER WORKOUT PLAN</string>
    <string name="cat_name12">BACK POWER WORKOUT PLAN</string>
    <string name="cat_name13">FULL BODY STREACH PLAN</string>
    <string name="cat_name2">Fitness</string>
    <string name="cat_name3">Powerlifting</string>
    <string name="cat_name4">3 DAY GYM WORKOUT PLAN BY</string>
    <string name="cat_name5">3 DAY HOME WORKOUT PLAN BY</string>
    <string name="cat_name6">FAT BURNER ROUTINE</string>
    <string name="cat_name7">ABS BURNER</string>
    <string name="cat_name8">CHEST POWER WORKOUT PLAN</string>
    <string name="cat_name9">ARMS POWER WORKOUT PLAN</string>
    <string name="categoryDescription0">Best exercises to Build volume and add definition to your abs</string>
    <string name="categoryDescription1">Different exercises that will help you to get Strength and add Power</string>
    <string name="categoryDescription2">Perfect combination of exercise to build mass and add volume</string>
    <string name="categoryDescription3">Special exercises that will help you to Build strength and add muscle relief</string>
    <string name="categoryDescription4">Best exercise that will help you to Add definition and Volume add power</string>
    <string name="categoryDescription5">Different Exercise That will help you  to build the performance you want</string>
    <string name="categoryDescription6">Perfect combination of exercise to get your legs strength and increasing endurance</string>
    <string name="categoryDescription7">Great combination of exercise to Build strength and adding definition</string>
    <string name="categoryDescription8">Special exercise that will help you to Add force with diverse intensity levels</string>
    <string name="categoryDescription9">By Pro Version</string>
    <string name="chest_and_arms">Chest &amp; Arms.</string>
    <string name="conn">Please check your wi-fi or cellular internet connection!</string>
    <string name="core_zone">Core zone.</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_plus">To create new workout press +</string>
    <string name="day">Day</string>
    <string name="day1">2 days per week</string>
    <string name="day2">3 days per week</string>
    <string name="day3">4 days per week</string>
    <string name="days_of_week">days of week</string>
    <string name="days_title">Days per week:</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="delete">Delete</string>
    <string name="desc">Description:</string>
    <string name="dialog_future">You can\'t input data for future dates.</string>
    <string name="done">Done</string>
    <string name="dow_video">downvideo</string>
    <string name="downl_vid">downvideo</string>
    <string name="download_all">downvideo</string>
    <string name="edit">Edit</string>
    <string name="empty_message">00:00</string>
    <string name="erorr">Error!</string>
    <string name="ex_desc1">Muscle: Rectus Abdominis\n\nStep 1: Lie back on the decline bench. Position hands overhead. Knees are bent.\n\nStep 2: Raise your upper body upward while keeping your lower back on the bench. Hold for one second. Return to starting position</string>
    <string name="ex_desc10">Muscle: Rectus Abdominis\n\nStep 1: Lie on your back with your hands underneath your tailbone and have your legs straight upward, as illustrated\n\nStep 2: Pull your navel inward and flex your glutes as you lift your hips just a few inches the floor. Then lower your hips.</string>
    <string name="ex_desc100">Muscle: Biceps Brachii\n\nStep 1: Place a pair of dumbbells on the floor in front of a ball. Kneel directly behind the ball, and drape your arms over it to grab the dumbbells in an underhand grip. Let out weight move back toward your heels as you brace your triceps on the ball, forearms down.\n\nStep 2: Keep your back straight as you curl the weights up until your forearms are just short of perpendicular to the floor.</string>
    <string name="ex_desc101">Muscle: Biceps Brachii\n\nStep 1: Lie prone on the incline bench. Let dumbbells hang next to you with underhand rip. Keep arms straight.\n\nStep 2: Curl the weights slowly straight up. Your wrists should always be fixed, resist twisting them, and keep your upper arms perpendicular to the floor.</string>
    <string name="ex_desc102">Muscle: Gastrocnemius\n\nStep 1: While seated barbell on your lower things. Use your hands to stabilize any barbell movement.\n\nStep 2: Raise your calves by tiptoeing. Hold for one second. Lower your calves back to the ground.</string>
    <string name="ex_desc103">Muscle: Gastrocnemius\n\nStep 1: While seated with back straight, centre the barbell on one of your lower things. your hands to stabilize any barbell movement.\n\nStep 2: Raise your calves by tiptoeing. Hold for one second. Lower your calves back to the ground.\n\nStep 3: Repeat the same with the over leg.</string>
    <string name="ex_desc104">Muscle: Gastrocnemius\n\nStep 1: Stand with your feet hip-width apart. Grab a pair of dumbbells and hold them at your sides at arm\'s length.\n\nStep 2: Dip your knees so they are bent about 45 degrees and jump as high as you can. Point your toes toward the floor when you jump.\n\nStep 3: Allow your knees to bend 45 degrees when your land, then immediately jump again.</string>
    <string name="ex_desc105">Muscle: Gastrocnemius\n\nStep 1: While seated with back straight, centre one dumbbell on each of your lower thighs. Use your hands to stabilize any movement.\n\nStep 2: Raise your calves by tiptoeing. Hold for one second. Return to starting position.</string>
    <string name="rate_us">Rate us</string>
    <string name="send_f">Send Feedback</string>
    <string name="setting">Setting</string>
    <string name="title_1">Exercises</string>
    <string name="title_2">Workouts</string>
    <string name="title_3">Custom</string>
    <string name="title_9">Step Count</string>
    <string name="title_10">Diet Tips</string>
    <string name="diet_steps_description">Even if you follow every step of the workout plan to the letter,
        you wont see the results you want if you are not backing up your work in the gym in the kitchen.
        The obvious first steps are to cut down on fast food, takeaways and booze,
        and after that its all about getting your body the nutrients it needs to stay healthy and support your training regime. \n\n
        A minimum of five portions of fruit and vegetables a day is a good place to start.
        More than that is even better, although keep your daily fruit portions to two.
        You should also ensure you are getting 30g of fibre every day.
        Opt for wholegrain varieties where possible with your carbs to help on the fibre front. \n\n
        Adequate protein intake is also essential, because it provides the fuel you need to repair and rebuild muscles after a tough workout.
        When training regularly you should aim to consume about 1.4-2g of protein per kilo of bodyweight per day.
        You can use protein powder to help, but its not hard (and much tastier) to get that amount of protein from food if you are eating the right stuff.
        This guide to the best sources of protein will help, as will these run-downs of high-protein foods for vegetarians and vegans. \n\n
        If it all sounds like too much work when you are visiting the gym four times a week,
        another option is to use a healthy meal delivery service.
        These will deliver meals to your door that are tailored to your exact requirements,
        so all you have to do is stick them in the microwave. Its more expensive than meal planning and cooking for yourself,
        but less expensive than a Deliveroo habit – and its undoubtedly the most convenient
        way to support this training plan if you are struggling to maintain a healthy diet. \n
    </string>
</resources>